--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             class="tab-btn"
                             onclick="openTab(event, 'call')"
                         >
-                            Agendar Cita
+                            Cita
                         </button>
                     </div>
 
