Remove citation markers from job descriptions

--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                     <p
                         class="tw-text-gray-500 dark:tw-text-gray-200"
                     >
-                        Técnico IT Nivel 3 → Nivel 4 | [cite_start]Noviembre 2020 – Marzo 2025 [cite: 1]
+                        Técnico IT Nivel 3 → Nivel 4 | Noviembre 2020 – Marzo 2025
                     </p>
                     <p class="">
-                        [cite_start]Lideré la optimización del Soporte Técnico mediante la implementación de un sistema avanzado de gestión de tickets, mejorando significativamente los tiempos de respuesta[cite: 2]. [cite_start]Gestioné la modernización de la infraestructura de red, incluyendo migración a nuevas operadoras y el fortalecimiento de la seguridad perimetral con sistemas firewall robustos[cite: 2]. [cite_start]Experiencia en resolución experta de incidencias N3 y N4 en entornos críticos, asegurando la continuidad operativa y la capacidad de la infraestructura IT[cite: 2].
+                        Lideré la optimización del Soporte Técnico mediante la implementación de un sistema avanzado de gestión de tickets, mejorando significativamente los tiempos de respuesta[cite: 2].  Gestioné la modernización de la infraestructura de red, incluyendo migración a nuevas operadoras y el fortalecimiento de la seguridad perimetral con sistemas firewall robustos[cite: 2].  Experiencia en resolución experta de incidencias N3 y N4 en entornos críticos, asegurando la continuidad operativa y la capacidad de la infraestructura IT.
                     </p>
                 </div>
             </div>
@@ -324,10 +324,10 @@
                     <p
                         class="tw-text-gray-500 dark:tw-text-gray-200"
                     >
-                        Técnico IT / Técnico de Campo | [cite_start]Diciembre 2019 – Marzo 2020 [cite: 2]
+                        Técnico IT / Técnico de Campo | Diciembre 2019 – Marzo 2020
                     </p>
                     <p class="">
-                        [cite_start]Ejecución integral de la instalación y puesta en marcha de surtidores de combustible, incluyendo configuración técnica de componentes eléctricos y mecánicos[cite: 2]. [cite_start]Realicé la configuración avanzada de consolas de monitoreo de tanques y la implementación de cableado estructurado[cite: 2]. [cite_start]Diagnóstico y reparación eficiente de fallos complejos en hardware y software, con soporte multi-sistema (Windows, Linux y Mac)[cite: 2].
+                        Ejecución integral de la instalación y puesta en marcha de surtidores de combustible, incluyendo configuración técnica de componentes eléctricos y mecánicos[cite: 2].  Realicé la configuración avanzada de consolas de monitoreo de tanques y la implementación de cableado estructurado[cite: 2].  Diagnóstico y reparación eficiente de fallos complejos en hardware y software, con soporte multi-sistema (Windows, Linux y Mac)[cite: 2].
                     </p>
                 </div>
             </div>
@@ -342,10 +342,10 @@
                     <p
                         class="tw-text-gray-500 dark:tw-text-gray-200"
                     >
-                        Soporte Técnico Especializado | [cite_start]Septiembre 2019 - Diciembre 2019 [cite: 2]
+                        Soporte Técnico Especializado |  Septiembre 2019 - Diciembre 2019 [cite: 2]
                     </p>
                     <p class="">
-                        [cite_start]Experto en diagnóstico y reparación de hardware y software en una amplia gama de equipos informáticos y dispositivos móviles[cite: 2]. [cite_start]Gestión eficiente de la cadena de suministro, incluyendo pedidos y control de inventario de componentes críticos[cite: 2]. [cite_start]Instalación, configuración y personalización avanzada de sistemas operativos y aplicaciones, maximizando la funcionalidad para el usuario final[cite: 2].
+                         Experto en diagnóstico y reparación de hardware y software en una amplia gama de equipos informáticos y dispositivos móviles[cite: 2].  Gestión eficiente de la cadena de suministro, incluyendo pedidos y control de inventario de componentes críticos[cite: 2].  Instalación, configuración y personalización avanzada de sistemas operativos y aplicaciones, maximizando la funcionalidad para el usuario final[cite: 2].
                     </p>
                 </div>
             </div>
