Update email placeholder in signup form

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <input
                             type="email"
                             name=""
-                            placeholder="joe@mail.com"
+                            placeholder="l.sergio.camacho.fernandez@gmail.com"
                             class="input"
                         />
                         <button type="submit" class="btn-primary">
