--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         class="tw-flex tw-w-full tw-flex-col tw-bg-[#fff] tw-text-black dark:tw-bg-slate-800 dark:tw-text-white lg:tw-h-[100vh]"
     >
         <main
-            class="tw-flex tw-h-full tw-w-full tw-overflow-hidden max-lg:tw-flex-col"
+            class="tw-flex tw-h-full tw-w-full max-lg:tw-flex-col""
         >
             <section
                 class="tw-flex tw-h-full tw-w-[450px] tw-flex-col tw-place-items-center tw-gap-4 tw-p-4 max-lg:tw-w-full lg:tw-shadow-xl lg:dark:tw-shadow-gray-600"
@@ -106,7 +106,7 @@
                 </div>
             </section>
 
-            <div class="tw-h-full tw-w-full tw-overflow-hidden">
+            <div class="tw-h-full tw-w-full tw-overflow-y-auto">
                 <header
                     class="tw-relative tw-flex tw-w-full tw-overflow-hidden tw-p-2 max-lg:tw-h-[150px] max-lg:tw-flex-col lg:tw-h-[80px]"
                 >
