--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         />
     </head>
     <body
-        class="tw-flex tw-w-full tw-flex-col tw-bg-[#fff] tw-text-black dark:tw-bg-slate-800 dark:tw-text-white lg:tw-h-[100vh]"
+        class="tw-flex tw-h-full tw-w-[450px] tw-flex-col tw-place-items-center tw-gap-4 tw-p-4 max-lg:tw-w-full lg:tw-shadow-xl lg:dark:tw-shadow-gray-600 lg:tw-sticky lg:tw-top-0"
     >
         <main
             class="tw-flex tw-h-full tw-w-full max-lg:tw-flex-col""
