--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                             class="tw-flex tw-h-full tw-w-full tw-flex-wrap tw-place-content-center tw-gap-6 tw-p-4 max-xl:tw-place-items-center"
                         >
                             <iframe
-                                src="https://koalendar.com/e/meet-with-paul-about-webdesign?embed=true"
+                                src="https://koalendar.com/e/meet-with-sergio-camacho"
                                 width="100%"
                                 height="800px"
                                 frameborder="0"
