--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             >
                                 <div>
                                     <img
-                                        src="./assets/images/icons/html5.png"
+                                        src="./assets/images/icons/python.png"
                                         alt="html5"
                                         srcset=""
                                         class="tw-object-contain"
@@ -236,8 +236,8 @@
                             >
                                 <div>
                                     <img
-                                        src="./assets/images/icons/django.png"
-                                        alt="html5"
+                                        src="./assets/images/icons/azure.png"
+                                        alt="azure"
                                         srcset=""
                                         class="tw-object-contain"
                                     />
@@ -248,8 +248,8 @@
                             >
                                 <div>
                                     <img
-                                        src="./assets/images/icons/reactjs.png"
-                                        alt="react js"
+                                        src="./assets/images/icons/linux.png"
+                                        alt="linux"
                                         srcset=""
                                         class="tw-object-contain"
                                     />
@@ -261,8 +261,8 @@
                             >
                                 <div>
                                     <img
-                                        src="./assets/images/icons/tailwind.png"
-                                        alt="react js"
+                                        src="./assets/images/icons/jira.png"
+                                        alt="jira"
                                         srcset=""
                                         class="tw-object-contain"
                                     />
