--- a/index.html
+++ b/index.html
@@ -88,18 +88,9 @@
                 </div>
 
                 <div class="tw-mt-5 tw-flex tw-gap-5 tw-text-2xl">
-                    <a href="http://github.com/PaulleDemon" class="link">
+                    <a href="https://github.com/LSCF84" class="link">
                         <i class="bi bi-github"></i>
-                    </a>
-                    <a href="http://twitter.com/pauls_freeman" class="link">
-                        <i class="bi bi-twitter-x"></i>
-                    </a>
-                    <a
-                        href="http://www.youtube.com/@paultalkstech"
-                        class="link"
-                    >
-                        <i class="bi bi-youtube"></i>
-                    </a>
+                  </a>
                     <a href="mailto:paul@example.com" class="link">
                         <i class="bi bi-envelope-at-fill"></i>
                     </a>
