--- a/form/index.html
+++ b/form/index.html
@@ -81,6 +81,7 @@
                 <select id="project_type" name="project_type" required
                         class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light transition duration-150 ease-in-out appearance-none">
                     <option value="" disabled selected class="text-gray-400">Selecciona el tipo de servicio</option>
+                    <option value="consultoria">Entrecista para trabajar en su empresa</option>
                     <option value="consultoria">Consultoría IT y Optimización de Sistemas</option>
                     <option value="cloud_infra">Infraestructura Cloud (AWS/Azure) y Virtualización</option>
                     <option value="soporte">Soporte Técnico (N3/N4) y Troubleshooting</option>
@@ -103,7 +104,7 @@
 
             <!-- Campo 5: ¿Cuál es el presupuesto estimado? (Similar a Tally.so) -->
             <div>
-                <label for="budget" class="block text-sm font-medium text-text-muted mb-1">Presupuesto estimado (Opcional)</label>
+                <label for="budget" class="block text-sm font-medium text-text-muted mb-1">Presupuesto estimado (Ejemplo de integración)</label>
                 <select id="budget" name="budget"
                         class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light transition duration-150 ease-in-out appearance-none">
                     <option value="" disabled selected class="text-gray-400">Selecciona un rango</option>
