--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </p>
 
                 <a
-                    href="./form/index.html"
+                    href="./form/form.html"
                     class="btn-primary !tw-w-full tw-max-w-[550px] tw-transition-transform tw-duration-[0.3s] hover:tw-scale-[1.02]"
                 >
                     Contact me
