--- a/form/form.html
+++ b/form/form.html
@@ -97,9 +97,10 @@
         </header>
 
         <!-- Mensaje de Éxito (oculto por defecto) -->
+        <!-- NOTA: Hemos eliminado la mención a Formspree del mensaje de éxito -->
         <div id="success-message" class="hidden bg-green-900 border border-green-700 text-text-light p-4 rounded-lg mb-6 text-center">
             <p class="font-semibold">¡Gracias por tu mensaje!</p>
-            <p class="text-sm">Tu solicitud ha sido enviada con éxito. Revisa tu bandeja de entrada para la confirmación de Formspree (solo la primera vez).</p>
+            <p class="text-sm">Tu solicitud ha sido enviada con éxito y me pondré en contacto contigo pronto.</p>
         </div>
 
         <!-- Mensaje de Error (oculto por defecto) -->
@@ -110,36 +111,33 @@
 
         <!-- Formulario (visible por defecto) -->
         <form id="contact-form" 
-              action="https://formspree.io/f/xvzopovp" 
+              action="/api/send_email" <!-- CORRECCIÓN CRÍTICA: Apuntando a la función Serverless de Vercel -->
               method="POST" 
               class="space-y-6">
 
-            <!-- NOTA: El ID 'xvzopovp' es el ID público generado por Formspree para la dirección l.sergio.camacho.fernandez@gmail.com. 
-            Es un placeholder. Si tienes un email diferente o un endpoint específico de Formspree, cámbialo en la línea 'action' de arriba. -->
+            <!-- CAMBIO: Ya no necesitamos el campo oculto de Formspree (_subject) -->
+            <!-- <input type="hidden" name="_subject" value="Nueva Solicitud de Contacto - Formulario Web"> -->
             
-            <!-- Campo oculto para Formspree: Subject/Asunto (Opcional, pero recomendado) -->
-            <input type="hidden" name="_subject" value="Nueva Solicitud de Contacto - Formulario Web">
-
             <!-- Campo 1: Nombre Completo -->
             <div>
                 <label for="full_name" class="block text-sm font-medium text-text-muted mb-1">Nombre completo <span class="text-red-500">*</span></label>
-                <!-- Usamos 'name="name"' para que Formspree lo reconozca como el nombre del remitente -->
+                <!-- Usamos 'name="name"' para que el script Python lo reconozca -->
                 <input type="text" id="full_name" name="name" required
-                       placeholder="Tu nombre y apellido"
-                       class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light placeholder-gray-400 transition duration-150 ease-in-out">
+                        placeholder="Tu nombre y apellido"
+                        class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light placeholder-gray-400 transition duration-150 ease-in-out">
             </div>
 
             <!-- Campo 2: Email -->
             <div>
                 <label for="email" class="block text-sm font-medium text-text-muted mb-1">Email <span class="text-red-500">*</span></label>
-                 <!-- Usamos 'name="_replyto"' para que Formspree permita responder directamente al correo del remitente -->
+                 <!-- Usamos 'name="_replyto"' para que el script Python lo reconozca como Reply-To -->
                 <input type="email" id="email" name="_replyto" required
-                       placeholder="ejemplo@dominio.com"
-                       class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light placeholder-gray-400 transition duration-150 ease-in-out">
+                        placeholder="ejemplo@dominio.com"
+                        class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light placeholder-gray-400 transition duration-150 ease-in-out">
             </div>
 
             <!-- Campo 3: ¿Qué necesitas? -->
-            <div>
+            <div class="relative"> <!-- Añadido relative para posicionar el SVG -->
                 <label for="project_type" class="block text-sm font-medium text-text-muted mb-1">¿En qué puedo ayudarte? <span class="text-red-500">*</span></label>
                 <select id="project_type" name="Tipo de Proyecto" required
                         class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light transition duration-150 ease-in-out appearance-none">
@@ -151,8 +149,8 @@
                     <option value="Ciberseguridad">Ciberseguridad y Gestión de Acceso</option>
                     <option value="Otro">Otro (Especificar en el detalle)</option>
                 </select>
-                <!-- Icono SVG de flecha hacia abajo para el select, ya que appearance-none lo oculta -->
-                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-text-light">
+                <!-- Icono SVG de flecha hacia abajo -->
+                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-text-light mt-7">
                     <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
                 </div>
             </div>
@@ -161,12 +159,12 @@
             <div>
                 <label for="project_details" class="block text-sm font-medium text-text-muted mb-1">Cuéntame más detalles sobre lo que necesitas:</label>
                 <textarea id="project_details" name="Detalles del Proyecto" rows="4"
-                          placeholder="Describe brevemente el alcance, objetivos y plazos si los conoces."
-                          class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light placeholder-gray-400 transition duration-150 ease-in-out"></textarea>
+                              placeholder="Describe brevemente el alcance, objetivos y plazos si los conoces."
+                              class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light placeholder-gray-400 transition duration-150 ease-in-out"></textarea>
             </div>
 
             <!-- Campo 5: ¿Cuál es el presupuesto estimado? -->
-            <div>
+            <div class="relative"> <!-- Añadido relative para posicionar el SVG -->
                 <label for="budget" class="block text-sm font-medium text-text-muted mb-1">Presupuesto estimado (Opcional)</label>
                 <select id="budget" name="Presupuesto Estimado"
                         class="mt-1 block w-full px-4 py-2 bg-primary-dark border border-gray-600 rounded-lg text-text-light transition duration-150 ease-in-out appearance-none">
@@ -177,8 +175,8 @@
                     <option value="Más de 5.000 €">Más de 5.000 €</option>
                     <option value="Aún no lo sé">Aún no lo sé</option>
                 </select>
-                <!-- Icono SVG de flecha hacia abajo para el select -->
-                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-text-light">
+                <!-- Icono SVG de flecha hacia abajo -->
+                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-text-light mt-7">
                     <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
                 </div>
             </div>
@@ -287,7 +285,7 @@
             });
         });
 
-        // 3. Lógica de envío de formulario usando Formspree y Fetch API
+        // 3. Lógica de envío de formulario usando la función Serverless de Vercel
         document.getElementById('contact-form').addEventListener('submit', async function(event) {
             event.preventDefault();
 
@@ -308,31 +306,42 @@
             loadingIndicator.classList.remove('hidden');
 
             const data = new FormData(form);
-            const url = form.action;
+            const url = form.action; // Ahora es '/api/send_email'
 
             try {
-                // Envío real usando Fetch API a Formspree
+                // Envío real usando Fetch API a la función de Vercel
                 const response = await fetch(url, {
                     method: 'POST',
                     body: data,
-                    headers: {
-                        'Accept': 'application/json'
-                    }
+                    // CORRECCIÓN: Eliminamos el header 'Accept': 'application/json' si Vercel devuelve JSON.
+                    // Flask ya maneja el Content-Type para el JSON de respuesta.
                 });
 
                 // 2. Manejar respuesta
                 if (response.ok) {
+                    // Si la respuesta es 200 (OK) o 204 (No Content), asumimos éxito
                     // Éxito
                     form.classList.add('hidden'); // Ocultar el formulario
                     successMessage.classList.remove('hidden'); // Mostrar el mensaje de éxito
                     form.reset();
                 } else {
-                    // Error (ej. validación fallida o Formspree está caído)
+                    // Error (incluye 400, 500, etc., que tu script Python devuelve)
+                    // Si la función de Python falla, devuelve un código != 200 y se activa este bloque.
                     errorMessage.classList.remove('hidden');
+                    console.error('Error del servidor de Vercel:', response.status);
+
+                    // Opcional: Intentar leer el mensaje de error JSON de la función de Vercel (si lo configuraste así)
+                    const errorJson = await response.json().catch(() => ({}));
+                    if (errorJson.message) {
+                        document.querySelector('#error-message p.text-sm').textContent = errorJson.message;
+                    } else {
+                        document.querySelector('#error-message p.text-sm').textContent = `Hubo un error (${response.status}). Por favor, inténtalo de nuevo.`;
+                    }
                 }
             } catch (error) {
-                // Error de red (ej. sin conexión)
+                // Error de red (ej. sin conexión o fallo de CORS si el backend no lo configuró bien)
                 errorMessage.classList.remove('hidden');
+                document.querySelector('#error-message p.text-sm').textContent = 'Error de red o CORS. Verifica la consola y el log de Vercel.';
                 console.error('Error de red al enviar el formulario:', error);
             } finally {
                 // 3. Restaurar botón y ocultar carga después de la operación (éxito o error)
@@ -342,10 +351,8 @@
                 submitButton.textContent = 'Enviar Solicitud';
                 
                 // Si hubo un error, volvemos a mostrar el formulario para que el usuario pueda corregir
-                if (!successMessage.classList.contains('hidden')) {
-                     // Si hubo éxito, el formulario permanece oculto.
-                } else {
-                    form.classList.remove('hidden');
+                if (successMessage.classList.contains('hidden')) {
+                     form.classList.remove('hidden');
                 }
             }
         });
