--- a/form/form.html
+++ b/form/form.html
@@ -155,7 +155,7 @@
     // ----------------------------------------------------
     
     // *** ¡ATENCIÓN! DEBES REEMPLAZAR ESTA URL CON TU ENDPOINT REAL DE FORMSPREE ***
-    const FORMSPREE_ENDPOINT = 'https://formspree.io/f/fmoqgrkp'; 
+    const FORMSPREE_ENDPOINT = 'https://formspree.io/f/xnnwvdkl'; 
     // **********************************************************************
 
     const formContainer = document.getElementById('contactFormContainer');
