--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
                     <a href="mailto:l.sergio.camacho.fernandez@gmail.com" class="link">
                         <i class="bi bi-envelope-at-fill"></i>
                     </a>
+					
+					</a>
+					<a href="https://portfolio-main-lscf.vercel.app/" class="link">
+   					 <i class="bi bi-globe"></i>
+					</a>
                 </div>
             </section>
 
