--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     href="./form/form.html"
                     class="btn-primary !tw-w-full tw-max-w-[550px] tw-transition-transform tw-duration-[0.3s] hover:tw-scale-[1.02]"
                 >
-                    Contact me
+                    contacta conmigo
                 </a>
 
                 <div class="tw-mt-5 tw-flex tw-gap-5 tw-text-2xl">
