--- a/index.html
+++ b/index.html
@@ -215,7 +215,68 @@
                                     />
                                 </div>
                             </div>
+							
+							<div
+                                class="tw-flex tw-h-[150px] tw-w-[150px] tw-place-content-center tw-items-center tw-rounded-lg tw-border-2 tw-border-primary tw-bg-white tw-shadow-xl"
+                            >
+                                <div>
+                                    <img
+                                        src="./assets/images/icons/ai.png"
+                                        alt="AI"
+                                        srcset=""
+                                        class="tw-object-contain"
+                                    />
+                                </div>
+                            </div>
+							<div
+                                class="tw-flex tw-h-[150px] tw-w-[150px] tw-place-content-center tw-items-center tw-rounded-lg tw-border-2 tw-border-primary tw-bg-white tw-shadow-xl"
+                            >
+                                <div>
+                                    <img
+                                        src="./assets/images/icons/git-svgrepo-com.png"
+                                        alt="Git"
+                                        srcset=""
+                                        class="tw-object-contain"
+                                    />
+                                </div>
+                            </div>
+							<div
+                                class="tw-flex tw-h-[150px] tw-w-[150px] tw-place-content-center tw-items-center tw-rounded-lg tw-border-2 tw-border-primary tw-bg-white tw-shadow-xl"
+                            >
+                                <div>
+                                    <img
+                                        src="./assets/images/icons/github-svgrepo-com.png"
+                                        alt="Github"
+                                        srcset=""
+                                        class="tw-object-contain"
+                                    />
+                                </div>
+                            </div>
 
+							<div
+                                class="tw-flex tw-h-[150px] tw-w-[150px] tw-place-content-center tw-items-center tw-rounded-lg tw-border-2 tw-border-primary tw-bg-white tw-shadow-xl"
+                            >
+                                <div>
+                                    <img
+                                        src="./assets/images/icons/nextjs-icon-svgrepo-com.png"
+                                        alt="Nextjs"
+                                        srcset=""
+                                        class="tw-object-contain"
+                                    />
+                                </div>
+                            </div>
+							<div
+                                class="tw-flex tw-h-[150px] tw-w-[150px] tw-place-content-center tw-items-center tw-rounded-lg tw-border-2 tw-border-primary tw-bg-white tw-shadow-xl"
+                            >
+                                <div>
+                                    <img
+                                        src="./assets/images/icons/windows.png"
+                                        alt="Windows"
+                                        srcset=""
+                                        class="tw-object-contain"
+                                    />
+                                </div>
+                            </div>
                             <div
                                 class="tw-flex tw-h-[150px] tw-w-[150px] tw-place-content-center tw-items-center tw-rounded-lg tw-border-2 tw-border-primary tw-bg-white tw-shadow-xl"
                             >
