--- a/index.html
+++ b/index.html
@@ -524,6 +524,35 @@
                 ></footer>
             </div>
         </main>
+			<div 
+    id="cookie-banner" 
+    class="tw-fixed tw-bottom-0 tw-left-0 tw-right-0 tw-bg-slate-700 tw-text-white tw-p-4 tw-shadow-2xl tw-z-[9999] tw-hidden tw-items-center tw-justify-center max-lg:tw-flex-col tw-gap-4 dark:tw-bg-slate-700"
+>
+    <p class="tw-text-sm tw-text-center lg:tw-text-left tw-max-w-4xl">
+        Utilizamos cookies para mejorar tu experiencia, ofrecer funciones de redes sociales y analizar el tráfico. Al hacer clic en "Aceptar", consientes el uso de todas las cookies. Consulta nuestra 
+        <a 
+            href="./politica-cookies.html" 
+            class="tw-font-semibold tw-text-primary hover:tw-underline tw-transition-colors"
+            target="_blank"
+        >
+            Política de Cookies
+        </a>.
+    </p>
+    <div class="tw-flex tw-gap-3 tw-mt-2 lg:tw-mt-0">
+        <button 
+            id="decline-cookies" 
+            class="btn-primary !tw-bg-transparent !tw-border-2 tw-border-primary hover:!tw-bg-primary hover:!tw-text-buttonFg tw-text-sm tw-transition-colors tw-min-w-[100px]"
+        >
+            Rechazar
+        </button>
+        <button 
+            id="accept-cookies" 
+            class="btn-primary tw-text-sm tw-transition-colors tw-min-w-[120px]"
+        >
+            Aceptar cookies
+        </button>
+    </div>
+</div>
     </body>
 
     <script
